Fixes HTML errors

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Street Fighter</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
 	<script src="http://code.jquery.com/jquery.min.js"></script>
@@ -17,12 +17,12 @@
 			<div class="ryu-cool"></div>
 		</div>
 		<div class="hadouken"></div>
-		<li class="info">
-			<ul>HOVER OVER RYU TO GET HIM READY</ul>
-			<ul>CLICK ON RYU FOR A HADOUKEN</ul>
-			<ul>PRESS X FOR A COOL POSE</ul>
-		</li>
+		<ul class="info">
+			<li>HOVER OVER RYU TO GET HIM READY</li>
+			<li>CLICK ON RYU FOR A HADOUKEN</li>
+			<li>PRESS X FOR A COOL POSE</li>
+		</ul>
 	</div>
-	<audio id="hadouken-sound" src="sound/hadouken.mp3">
+	<audio id="hadouken-sound" src="sound/hadouken.mp3"> </audio>
 </body>
 </html>
