--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Street Fighter</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="shortcut icon" href="images/icon.png"/>
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </head>
